# ScreenStreamer

./: .gitignore  README.md  build.gradle  local.properties  settings.gradle
app/src/androidTest/java/com/xucz/screenstream/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/xucz/screenstream/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/xucz/screenstream/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libmp4parser_1_x/: README.md  build.gradle
libmp4parser_1_x/src/main/: AndroidManifest.xml
libmp4parser_1_x/src/main/java/com/coremedia/iso/: BoxReplacer.java  IsoFile.java  IsoTypeReader.java  PropertyBoxParserImpl.java
libmp4parser_1_x/src/main/java/com/googlecode/mp4parser/: AbstractBox.java  AbstractContainerBox.java  AbstractFullBox.java  BasicContainer.java  DataSource.java  DirectFileReadDataSource.java  FileDataSourceImpl.java  FullContainerBox.java  MultiFileDataSourceImpl.java
libmp4parser_1_x/src/main/res/values/: strings.xml
libscreenstream/: build.gradle
libscreenstream/src/main/: AndroidManifest.xml
libscreenstream/src/main/cpp/: CMakeLists.txt
libscreenstream/src/main/res/values/: strings.xml
libscreenstream_v2/: build.gradle
libscreenstream_v2/src/main/: AndroidManifest.xml
libscreenstream_v2/src/main/cpp/: CMakeLists.txt  native_lib.c
libscreenstream_v2/src/main/res/values/: strings.xml
sample/: build.gradle
sample/src/main/: AndroidManifest.xml
sample/src/main/res/layout/: activity_main.xml
(+232 files in other folders)
